--- a/iletişim.html
+++ b/iletişim.html
@@ -40,6 +40,7 @@
           </li>
           <li class="navbarItem"><a href="hakkimizda.html">Hakkımızda</a></li>
           <li class="navbarItem"><a href="iletişim.html">İletişim</a></li>
+          <li class="navbarItem"><a href="weather.html">Hava Durumu</a></li>
         </ul>
       </div>
       <h1 class="head">İletişim Formu</h1>
@@ -71,6 +72,22 @@
             <label for="message" class="formElementLabel">Mesaj :</label>
             <textarea id="message" rows="5" class="formElementArea"></textarea>
           </div>
+          <div class="rating">
+            <p>Bizi Değerlendirir Misiniz?</p>
+            <div class="rate">
+              <input type="radio" id="star5" name="rate" value="5" />
+              <label for="star5" title="text"></label>
+              <input type="radio" id="star4" name="rate" value="4" />
+              <label for="star4" title="text"></label>
+              <input type="radio" id="star3" name="rate" value="3" />
+              <label for="star3" title="text"></label>
+              <input type="radio" id="star2" name="rate" value="2" />
+              <label for="star2" title="text"></label>
+              <input type="radio" id="star1" name="rate" value="1" />
+              <label for="star1" title="text"></label>
+            </div>
+          </div>
+
           <button class="submitButton">Gönder</button>
         </form>
       </div>
