--- a/teknoloji.html
+++ b/teknoloji.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Teknoloji</title>
+    <!-- Favicon -->
+    <link rel="icon" href="./favicon-32x32.png" type="image/x-icon" />
     <!-- Css Linki -->
     <link rel="stylesheet" href="style.css" />
     <!-- Font Awesome Linki-->
@@ -35,6 +37,7 @@
           </li>
           <li class="navbarItem"><a href="hakkimizda.html">Hakkımızda</a></li>
           <li class="navbarItem"><a href="iletişim.html">İletişim</a></li>
+          <li class="navbarItem"><a href="weather.html">Hava Durumu</a></li>
         </ul>
       </div>
       <h1 class="head">Teknoloji</h1>
